# template-rusty-python

./: .envrc  .gitignore  LICENSE  NIX.md  README.md  TEMPLATE.md  build.sh  flake.nix  justfile  shell.nix
.github/: template.yml
.github/workflows/: ci.yml  template-init.yml
python/: README.md  pyproject.toml
python/src/PYTHON_PACKAGE_NAME_PLACEHOLDER/: api.py
python/src/template_project/: api.py
python/tests/: test_add.py
rust-core/: Cargo.toml
rust-core/src/: lib.rs
