[project]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
description = "{{PROJECT_DESCRIPTION}}"
readme = "README.md"
authors = [
    { name = "{{AUTHOR_NAME}}", email = "{{AUTHOR_EMAIL}}" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "plotly>=6.4.0",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.11.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.1",
    "maturin>=1.10.1",
]

[tool.maturin]
# Rust crate
manifest-path = "../rust-core/Cargo.toml"

# Where to find Python packages for the wheel
python-source = "src"

# Explicitly tell maturin which pure-Python package(s) to ship
python-packages = ["PYTHON_PACKAGE_NAME_PLACEHOLDER"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
